   http://creativecommons.org/licenses/by-sa/3.0/ or send a letter to
   Creative Commons, 559 Nathan Abbott Way, Stanford, California 94305,
   USA.  A summary of the license and the full legal text is included
   in file: COPYING.  If you wish to distribute some or all of this work
   under different terms, please contact respective author(s).
   The license applies to all entries newer than 2009-04-28.
*/

2012-09-29 16:43 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbqt/qtgui/qth/QBoxLayout.qth
  * hbqt/qtgui/qth/QGridLayout.qth
  * hbqt/qtgui/qth/QLayout.qth
  * hbqt/qtgui/qth/QStandardItemModel.qth
    ! Fixed: the GPF og HbIDE on EXIT on MSVC and *nix systems discovered 
       by Przemek. On MSVC it is fixed, and nixes, I hope should have been 
       fixed too. Can someone confirm ?

2012-09-29 16:31 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbaddons.hbp
    + Added: all Qt based libraries, but kept commented. Please uncomment one 
       required by you.

2012-09-29 15:39 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  + Initial commit in decided repo after all commits below in a temp repo 
    to make the code compilable and workable.

2012-09-29 12:55 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * ChangeLog
  * hbaddons.hbp
    + Added: missing SVN properties markers.

2012-09-29 12:25 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  + SVN Properties.

2012-09-29 19:30 UTC+0100 Maurizio la Cecilia (m.lacecilia at gmail.com)
  + hbaddons.hbp
    + added .hbp for to make it easy to build in a shot with hbmk2
  * hbide/hbide.hbp
  * hbide/xbpaddons/xbpaddons.hbp
  * hbnetioqt/hbnetioq.hbp
  * hbqt/hbqt_common.hbm
  * hbxbp/hbxbp.hbp
    * changed the path to output the built libs/exes
  * hbide/xbpaddons/dbu.prg
    * correct the references of renamed ui files in Harbour rev. 18121

2012-09-29 17:30 UTC+0100 Maurizio la Cecilia (m.lacecilia at gmail.com)
  + Initial Commit.