@@ -16,6 +16,13 @@
    The license applies to all entries newer than 2009-04-28.
 */
 
+2012-09-29 19:10 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
+  * hbqt/qtcore/hbqt_bind.cpp
+    % Optimization leading to proper object destruction on Qt level,
+       in certain cases. This optimization has no visible impact, but 
+       certainly improves memory consumption in applications which 
+       have high rate of creation/destruction cycles.
+
 2012-09-29 16:43 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
   * hbqt/qtgui/qth/QBoxLayout.qth
   * hbqt/qtgui/qth/QGridLayout.qth
